--- a/OnlineShop/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
@@ -3,42 +3,48 @@
 					<span class="align-middle" style="color:white">Admin Pages</span>
 				</a>
 				<ul class="sidebar-nav">
-					<li class="sidebar-header">
+					<li class="sidebar-header" style="color:white">
 						Pages
 					</li>
 
-					<li class="sidebar-item active">
+					<li class="sidebar-item">
 						<a class="sidebar-link" asp-area="Admin" asp-controller="Home" asp-action="Index">
-							<i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Thống kê</span>
+							<i class="align-middle" data-feather="sliders"></i> 
+							<span class="align-middle" style="color:white">Thống kê</span>
+						</a>
+					</li>
+
+					<li class="sidebar-item">
+						<a class="sidebar-link" asp-area="Admin" asp-controller="AdminRoles" asp-action="Index">
+							<i class="align-middle" data-feather="key"></i> 
+							<span class="align-middle" style="color:white">Quản lý quyền truy cập</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="key"></i> <span class="align-middle">Quản lý quyền truy cập</span>
+							<i class="align-middle" data-feather="users"></i> 
+							<span class="align-middle" style="color:white">Quản lý tài khoản</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="users"></i> <span class="align-middle">Quản lý tài khoản</span>
+							<i class="align-middle" data-feather="bookmark"></i> 
+							<span class="align-middle" style="color:white">Quản lý danh mục</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="bookmark"></i> <span class="align-middle">Quản lý danh mục</span>
-						</a>
-					</li>
-
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="box"></i> <span class="align-middle">Quản lý sản phẩm</span>
+							<i class="align-middle" data-feather="box"></i> 
+							<span class="align-middle" style="color:white">Quản lý sản phẩm</span>
 						</a>
 					</li>
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="truck"></i> <span class="align-middle">Quản lý đơn hàng</span>
+							<i class="align-middle" data-feather="truck"></i> 
+							<span class="align-middle" style="color:white">Quản lý đơn hàng</span>
 						</a>
 					</li>
 				</ul>
