--- a/OnlineShop/Areas/Admin/Views/AdminCategories/Details.cshtml
+++ b/OnlineShop/Areas/Admin/Views/AdminCategories/Details.cshtml
@@ -1,21 +1,20 @@
-﻿@model OnlineShop.Models.Role
+﻿@model OnlineShop.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Xóa vai trò</h2>
+<h2>Chi tiết danh mục</h2>
 
 <div>
-    <h4>Bạn có chắc chắn xóa không?</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Tên vai trò
+            Tên danh mục
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.RoleName)
+            @Html.DisplayFor(model => model.CategoryName)
         </dd>
         <dt>
             Trạng thái
@@ -31,10 +30,8 @@
             }
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="RoleId" />
-        <input type="submit" value="Xóa" class="btn btn-danger" /> |
-        <a asp-action="Index">Trở về danh sách</a>
-    </form>
+</div>
+<div>
+    <a class = "btn btn-primary" asp-action="Edit" asp-route-id="@Model.CategoryId">Chỉnh sửa</a> |
+    <a asp-action="Index">Trở về danh sách</a>
 </div>
