--- a/OnlineShop/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_SidebarPartialView.cshtml
@@ -22,27 +22,27 @@
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="#">
-							<i class="align-middle" data-feather="users"></i> 
-							<span class="align-middle" style="color:white">Quản lý tài khoản</span>
+						<a class="sidebar-link" asp-area="Admin" asp-controller="AdminUsers" asp-action="Index">
+								<i class="align-middle" data-feather="users"></i> 
+								<span class="align-middle" style="color:white">Quản lý tài khoản</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="#">
+						<a class="sidebar-link" asp-area="Admin" asp-controller="AdminCategories" asp-action="Index">
 							<i class="align-middle" data-feather="bookmark"></i> 
 							<span class="align-middle" style="color:white">Quản lý danh mục</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="#">
+						<a class="sidebar-link" asp-area="Admin" asp-controller="AdminProducts" asp-action="Index">
 							<i class="align-middle" data-feather="box"></i> 
 							<span class="align-middle" style="color:white">Quản lý sản phẩm</span>
 						</a>
 					</li>
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="#">
+						<a class="sidebar-link"asp-area="Admin" asp-controller="AdminOrders" asp-action="Index">
 							<i class="align-middle" data-feather="truck"></i> 
 							<span class="align-middle" style="color:white">Quản lý đơn hàng</span>
 						</a>
