--- a/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
@@ -6,82 +6,83 @@
 <h1 class="h3 mb-3"><strong>Thống kê</strong> </h1>
 
 <div class="row">
-	<div class="col-xl-6 col-xxl-5 d-flex">
-							<div class="w-100">
-								<div class="row">
-									<div class="col-sm-6">
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title" style="color:black;">Tăng trưởng</h5>
-													</div>
+	@*<div class="col-xl-6 col-xxl-5 d-flex">*@
+	<div class="col-xl-15 col-xxl-5 d-flex">
+		<div class="w-100">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body">
+							<div class="row">
+								<div class="col mt-0">
+									<h5 class="card-title" style="color:black;">Tăng trưởng</h5>
+								</div>
 
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="trending-up"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">10%</h1>
-											</div>
-										</div>
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title" style="color:black;">Người dùng</h5>
-													</div>
-
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="users"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">14.212</h1>
-											</div>
-										</div>
-									</div>
-									<div class="col-sm-6">
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title" style="color:black;">Doanh thu</h5>
-													</div>
-
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="dollar-sign"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">$21.300</h1>
-											</div>
-										</div>
-										<div class="card">
-											<div class="card-body">
-												<div class="row">
-													<div class="col mt-0">
-														<h5 class="card-title" style="color:black;">Số đơn hàng</h5>
-													</div>
-
-													<div class="col-auto">
-														<div class="stat text-primary">
-															<i class="align-middle" data-feather="shopping-cart"></i>
-														</div>
-													</div>
-												</div>
-												<h1 class="mt-1 mb-3">64</h1>
-											</div>
-										</div>
+								<div class="col-auto">
+									<div class="stat text-primary">
+										<i class="align-middle" data-feather="trending-up"></i>
 									</div>
 								</div>
 							</div>
+							<h1 class="mt-1 mb-3">@ViewBag.growth%</h1>
 						</div>
+					</div>
+					<div class="card">
+						<div class="card-body">
+							<div class="row">
+								<div class="col mt-0">
+									<h5 class="card-title" style="color:black;">Người dùng</h5>
+								</div>
 
-	<div class="col-xl-6 col-xxl-7">
+								<div class="col-auto">
+									<div class="stat text-primary">
+										<i class="align-middle" data-feather="users"></i>
+									</div>
+								</div>
+							</div>
+							<h1 class="mt-1 mb-3">@ViewBag.totalUsers</h1>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="card">
+						<div class="card-body">
+							<div class="row">
+								<div class="col mt-0">
+									<h5 class="card-title" style="color:black;">Doanh thu</h5>
+								</div>
+
+								<div class="col-auto">
+									<div class="stat text-primary">
+										<i class="align-middle" data-feather="dollar-sign"></i>
+									</div>
+								</div>
+							</div>
+							<h1 class="mt-1 mb-3">@ViewBag.totalRevenue</h1>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-body">
+							<div class="row">
+								<div class="col mt-0">
+									<h5 class="card-title" style="color:black;">Số đơn hàng</h5>
+								</div>
+
+								<div class="col-auto">
+									<div class="stat text-primary">
+										<i class="align-middle" data-feather="shopping-cart"></i>
+									</div>
+								</div>
+							</div>
+							<h1 class="mt-1 mb-3">@ViewBag.totalOrders</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	@*<div class="col-xl-6 col-xxl-7">
 		<div class="card flex-fill w-100">
 			<div class="card-header">
 
@@ -93,7 +94,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>*@
 </div>
 
 <div class="row">
@@ -102,29 +103,18 @@
 			<div class="card-header">
 				<h1 class="card-title mb-0" style="color:black;">Doanh thu theo tháng</h1>
 			</div>
-			<div class="card-body d-flex">
-				<div class="align-items-center">
-					<div class="m-t-15" style="height: 5px">
-						<p>Tháng 1: $12.000</p>
+			@for(var i = 0; i < 12; i++)
+			{
+				<div class="card-body d-flex">
+					<div class="align-items-center">
+						<div class="m-t-15" style="height: 5px">
+							<p>Tháng @(i+1): @ViewBag.monthlyRevenue[i]</p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="card-body d-flex">
-				<div class="align-items-center">
-					<div class="m-t-15" style="height: 5px">
-						<p>Tháng 2: $12.000</p>
-					</div>
-				</div>
-			</div>
-			<div class="card-body d-flex">
-				<div class="align-items-center">
-					<div class="m-t-15" style="height: 5px">
-						<p>Tháng 3: $12.000</p>
-					</div>
-				</div>
-			</div>
+			}
 			<div class="card-header">
-				<h1 class="card-title mb-0" style="color:black;">Tổng doanh thu: $36.000</h1>
+				<h1 class="card-title mb-0" style="color:black;">Doanh thu trung bình: @ViewBag.totalRevenue</h1>
 			</div>
 		</div>
 	</div>
