Update code admin

--- a/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
 				</div>
 			}
 			<div class="card-header">
-				<h1 class="card-title mb-0" style="color:black;">Doanh thu trung bình: @ViewBag.totalRevenue</h1>
+				<h1 class="card-title mb-0" style="color:black;">Doanh thu trung bình: @ViewBag.averageRevenue</h1>
 			</div>
 		</div>
 	</div>
