--- a/OnlineShop/Views/Customer/SignIn.cshtml
+++ b/OnlineShop/Views/Customer/SignIn.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model OnlineShop.Models.User
 @{
     ViewData["Title"] = "SignIn";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,17 +10,17 @@
                     <div class="row h-100" style="padding-left:400px;">
                         <div class="col-lg-6">
                             <br />
-                            <form action="#">
+                            <form asp-action="SignIn">
                                 <div class="login-form">
                                     <h4 class="login-title">Đăng nhập</h4>
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <label>Email</label>
-                                            <input type="email" placeholder="Nhập email">
+                                            <input asp-for="Email" type="email" placeholder="Nhập email">
                                         </div>
                                         <div class="col-lg-12">
                                             <label>Mật khẩu</label>
-                                            <input type="password" placeholder="Nhập mật khẩu">
+                                            <input asp-for="Password" type="password" placeholder="Nhập mật khẩu">
                                         </div>
                                         <div class="col-md-8 pt-2 mt-md-0">
                                             <div class="forgotton-password_info">
