--- a/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Views/Shared/_Layout.cshtml
@@ -42,65 +42,17 @@
 
         <!-- Begin Main Header Area -->
         <header class="main-header_area position-relative">
-            <div class="header-top border-bottom d-none d-md-block">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-6">
-                            <div class="header-top-left">
-                                <ul class="dropdown-wrap text-matterhorn">
-                                    <li class="dropdown">
-                                        <button class="btn btn-link dropdown-toggle ht-btn" type="button" id="languageButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                            English
-                                        </button>
-                                        <ul class="dropdown-menu" aria-labelledby="languageButton">
-                                            <li><a class="dropdown-item" href="#">French</a></li>
-                                            <li><a class="dropdown-item" href="#">Italian</a></li>
-                                            <li><a class="dropdown-item" href="#">Spanish</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <button class="btn btn-link dropdown-toggle ht-btn" type="button" id="currencyButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                            USD
-                                        </button>
-                                        <ul class="dropdown-menu" aria-labelledby="currencyButton">
-                                            <li><a class="dropdown-item" href="#">GBP</a></li>
-                                            <li><a class="dropdown-item" href="#">ISO</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        Call Us
-                                        <a href="tel://3965410">3965410</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="header-top-right text-matterhorn">
-                                <p class="shipping mb-0">Free delivery on order over <span>$200</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="header-middle py-5">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-12">
                             <div class="header-middle-wrap">
-                                <a href="index.html" class="header-logo">
+                                <a href="@Url.Action("Index", "Home")" class="header-logo">
                                     <img src="~/assets/images/logo/dark.png" alt="Header Logo">
                                 </a>
                                 <div class="header-search-area d-none d-lg-block">
-                                    <form action="#" class="header-searchbox">
-                                        <select class="nice-select select-search-category wide">
-                                            <option value="all">All Category</option>
-                                            <option value="product-item">Product Item</option>
-                                            <option value="product-item-2">Product Item 02</option>
-                                            <option value="product-item-3">Product Item 03</option>
-                                            <option value="product-item-4">Product Item 04</option>
-                                            <option value="product-item-5">Product Item 05</option>
-                                        </select>
-                                        <input class="input-field" type="text" placeholder="Search Products">
+                                    <form asp-controller="Product" asp-action="Search" method="post" class="header-searchbox">
+                                        <input class="input-field" name="keyword" type="text" placeholder="Tìm kiếm sản phẩm">
                                         <button class="btn btn-outline-whisper btn-primary-hover" type="submit"><i class="pe-7s-search"></i></button>
                                     </form>
                                 </div>
@@ -153,169 +105,16 @@
                                     <nav class="main-nav">
                                         <ul>
                                             <li class="drop-holder">
-                                                <a href="javascript:void(0)">Home
-                                                    <i class="fa fa-chevron-down"></i>
+                                                <a href="@Url.Action("Index", "Home")">Trang chủ
                                                 </a>
-                                                <ul class="drop-menu">
-                                                    <li>
-                                                        <a href="index.html">Home One</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="index-2.html">Home Two</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <a href="about.html">About</a>
-                                            </li>
-                                            <li class="megamenu-holder">
-                                                <a href="javascript:void(0)">Shop
-                                                    <i class="fa fa-chevron-down"></i>
-                                                </a>
-                                                <ul class="drop-menu megamenu">
-                                                    <li>
-                                                        <span class="title">Shop Layout</span>
-                                                        <ul>
-                                                            <li>
-                                                                <a href="shop.html">Shop Default</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop-left-sidebar.html">Shop Left Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop-right-sidebar.html">Shop Right Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop-list-fullwidth.html">Shop List Fullwidth</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop-list-left-sidebar.html">Shop List Left Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop-list-right-sidebar.html">Shop List Right Sidebar</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                    <li>
-                                                        <span class="title">Product Style</span>
-                                                        <ul>
-                                                            <li>
-                                                                <a href="single-product.html">Single Product Default</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product-group.html">Single Product Group</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product-variable.html">Single Product Variable</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product-sale.html">Single Product Sale</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product-sticky.html">Single Product Sticky</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product-affiliate.html">Single Product Affiliate</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                    <li>
-                                                        <span class="title">Product Related</span>
-                                                        <ul>
-                                                            <li>
-                                                                <a href="my-account.html">My Account</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="login-register.html">Login | Register</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="cart.html">Shopping Cart</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="wishlist.html">Wishlist</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="compare.html">Compare</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="checkout.html">Checkout</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="menu-slider-wrap">
-                                                        <div class="swiper-container menu-slider">
-                                                            <div class="swiper-wrapper">
-                                                                <div class="swiper-slide img-zoom-effect with-overlay">
-                                                                    <a href="#" class="single-item">
-                                                                        <img class="img-full" src="~/assets/images/megamenu/slider/1.jpg" alt="Megamenu Slider">
-                                                                    </a>
-                                                                </div>
-                                                                <div class="swiper-slide img-zoom-effect with-overlay">
-                                                                    <a href="#" class="single-item">
-                                                                        <img class="img-full" src="~/assets/images/megamenu/slider/2.jpg" alt="Megamenu Slider">
-                                                                    </a>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
                                             </li>
                                             <li class="drop-holder">
-                                                <a href="javascript:void(0)">Pages
-                                                    <i class="fa fa-chevron-down"></i>
+                                                <a href="@Url.Action("Index", "Product")">Sản phẩm
                                                 </a>
-                                                <ul class="drop-menu">
-                                                    <li>
-                                                        <a href="faq.html">Frequently Questions</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="404.html">Error 404</a>
-                                                    </li>
-                                                </ul>
                                             </li>
                                             <li class="drop-holder">
-                                                <a href="javascript:void(0)">Blog
-                                                    <i class="fa fa-chevron-down"></i>
-                                                </a>
-                                                <ul class="drop-menu">
-                                                    <li class="sub-dropdown-holder">
-                                                        <a href="javascript:void(0)">Blog Holder</a>
-                                                        <ul class="drop-menu sub-dropdown">
-                                                            <li>
-                                                                <a href="blog.html">Blog Default</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-left-sidebar.html">Blog Left Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-right-sidebar.html">Blog Right Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-list-left-sidebar.html">Blog List Left Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-list-right-sidebar.html">Blog List Right Sidebar</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="sub-dropdown-holder">
-                                                        <a href="javascript:void(0)">Blog Detail Holder</a>
-                                                        <ul class="drop-menu sub-dropdown">
-                                                            <li>
-                                                                <a href="blog-detail.html">Blog Detail Default</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-detail-left-sidebar.html">Blog Detail Left Sidebar</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog-detail-right-sidebar.html">Blog Detail Right Sidebar</a>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <a href="contact.html">Contact</a>
+                                                <a href="javascript:void(0)">Giỏ hàng
+												</a>
                                             </li>
                                         </ul>
                                     </nav>
