Sign out function + Access management by role name

--- a/OnlineShop/Areas/Admin/Views/Shared/_NavbarPartialView.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Shared/_NavbarPartialView.cshtml
@@ -5,12 +5,12 @@
 					<ul class="navbar-nav navbar-align">
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-								<img src="~/AdminAssets/img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall" /> <span class="text-dark">Charles Hall</span>
+								<img src="~/AdminAssets/img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall" /> <span class="text-dark">@ViewBag.username</span>
 							</a>
 							<div class="dropdown-menu dropdown-menu-end">
-								<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
+								<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Thông tin tài khoản</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="log-out"></i>Log out</a>
+								<a class="dropdown-item" asp-area="default" asp-controller="Customer" asp-action="SignOut"><i class="align-middle me-1" data-feather="log-out"></i>Đăng xuất</a>
 							</div>
 						</li>
 					</ul>
