--- a/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Views/Shared/_Layout.cshtml
@@ -59,14 +59,27 @@
                                 <div class="header-right">
                                     <ul>
                                         <li class="dropdown d-none d-md-block">
-                                            <button class="btn btn-link dropdown-toggle ht-btn p-0" type="button" id="settingButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                                <i class="pe-7s-users"></i>
-                                            </button>
-                                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingButton">
-                                                <li><a class="dropdown-item" href="my-account.html">My account</a></li>
-                                                <li><a class="dropdown-item" asp-controller="Customer" asp-action="SignIn">Login</a></li>
-                                                <li><a class="dropdown-item" asp-controller="Customer" asp-action="SignUp">Register</a></li>
-                                            </ul>
+                                            @if (ViewBag.username != null)
+                                            {
+                                                <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
+								                    <img src="~/AdminAssets/img/avatars/avatar.jpg" style="border-radius:5px; max-height:50px; max-width: 50px;" /> 
+                                                    <span class="text-dark">@ViewBag.username</span>
+							                    </a>
+                                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingButton">
+                                                    <li><a class="dropdown-item" href="my-account.html">Tài khoản của tôi</a></li>
+                                                    <li><a class="dropdown-item" asp-controller="Customer" asp-action="SignOut">Đăng xuất</a></li>
+                                                </ul>
+                                            }
+                                            @if (ViewBag.username == null)
+                                            {
+                                                <button class="btn btn-link dropdown-toggle ht-btn p-0" type="button" id="settingButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <i class="pe-7s-users"></i>
+                                                </button>
+                                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingButton">
+                                                    <li><a class="dropdown-item" asp-controller="Customer" asp-action="SignIn">Đăng nhập</a></li>
+                                                    <li><a class="dropdown-item" asp-controller="Customer" asp-action="SignUp">Đăng ký</a></li>
+                                                </ul>
+                                            }
                                         </li>
                                         <li class="d-none d-md-block">
                                             <a href="wishlist.html">
